--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Jennifer Nicolella</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
